--- a/roles/vscodium/tasks/main.yml
+++ b/roles/vscodium/tasks/main.yml
@@ -11,5 +11,6 @@
     - esbenp.prettier-vscode
     - dracula-theme.theme-dracula
     - Catppuccin.catppuccin-vsc-icons
+    - BeardedBear.beardedicons
   register: extension_installation
   changed_when: "'already installed' not in extension_installation.stdout"
