--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Define the list of dev packages
   set_fact:
     packages:
-      - codium
+      - code
       - gcc
       - git 
       - make
