--- a/roles/setup-repos/tasks/main.yml
+++ b/roles/setup-repos/tasks/main.yml
@@ -23,18 +23,21 @@
     flatpakrepo_url: https://flathub.org/repo/flathub.flatpakrepo
     state: present
 
-- name: Add VSCodium repository
+- name: Import Microsoft key
+  command: rpm --import https://packages.microsoft.com/keys/microsoft.asc
+
+- name: Add VSCode repository
   copy:
-    dest: /etc/yum.repos.d/vscodium.repo
+    dest: /etc/yum.repos.d/vscode.repo
     content: |  
-      [gitlab.com_paulcarroty_vscodium_repo]
-      name=gitlab.com_paulcarroty_vscodium_repo
-      baseurl=https://paulcarroty.gitlab.io/vscodium-deb-rpm-repo/rpms/
+      [code]
+      name=Visual Studio Code
+      baseurl=https://packages.microsoft.com/yumrepos/vscode
       enabled=1
+      autorefresh=1
+      type=rpm-md
       gpgcheck=1
-      repo_gpgcheck=1
-      gpgkey=https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg
-      metadata_expire=1h
+      gpgkey=https://packages.microsoft.com/keys/microsoft.asc"
 
 - name: Add Brave Browser repository
   copy:
